# ident-meta

./: .dockerignore  .gitignore  CITATION.cff  CLEANUP_PLAN.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
configs/: burgers_viscous.yaml  default.yaml
configs/pdes/: burgers.yaml  heat.yaml  kdv.yaml  ks.yaml
data/checkpoints/: weakident_checkpoint.json
data/results/: combined_dataset.csv  fast_methods_local.csv  full_dataset.csv  weakident_all.csv  weakident_results.csv
data/test_results/: burgers_results.csv
docs/: DOCKER.md  README.md
experiments/: README.md
experiments/noise_stress_test_2025-12-19/: commands.txt  commit.txt  noise_stress_test_summary.csv
experiments/paper_run_2025-12-18/: commands.txt  commit.txt  env.txt  full_dataset_4methods.csv  model_comparison.csv
manuscript/: metrics.json  metrics.tex  paper.html  references.bib  tower_paper.tex
notebooks/: reproduce_paper.ipynb
scripts/: check_paper_consistency.py  choose_and_run.py  compare_models.py  evaluate_selector.py  generate_figures.py  generate_full_dataset.py  make_dataset.py  merge_weakident.py  noise_stress_test.py  reproduce_results.sh  run_all_methods.py  run_benchmark.py  run_fast_methods_local.py  run_weakident_local.py  train_models.py  train_selector.py
src/: __init__.py  data_gen.py  eval.py  features.py  ident_api.py  label_dataset.py  metrics.py  models.py  select_and_run.py  window_extractor.py
src/ident_methods/: __init__.py  base.py  lasso_sindy_method.py  pysindy_method.py  registry.py  robustident_method.py  stlsq_method.py  weakident_method.py  wsindy_method.py
src/models/: __init__.py  factory.py  model_zoo.py
tests/: __init__.py  test_checkpoint.py  test_features.py  test_integration.py  test_model_zoo.py  test_models.py  test_pysindy.py  test_robustident.py  test_selection.py  test_weakident.py
